dbeaver/pro#7286 Fix git comments